fix multiple node selected / optimize node & link reset

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@ margin: 0 0 0 10px;
 .legend-bluelink {
   width: 35px;
   height: 1px;
-  border: 2px solid #10c7d1;
+  border: 2px solid blue;
 }
 .legend-redlink {
   width: 35px;
